Security config + security route protection + session mgmt

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,9 @@ spring:
             dialect: org.hibernate.dialect.MySQL5InnoDBDialect      
     thymeleaf:
         cache: false 
+    security:
+        user:
+            name: "fran"
+            password: "1234"
+        
+        
