Added Photo upload feature and custom exception class

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
         cache: false 
     security:
         user:
-            name: "fran"
+            name: "fran@mail.com"
             password: "1234"
-        
+  
         
